Fixing overflow caused by miscalculation of header width including scroll bar. Old code was only doing the calculation on desktop devices and due to it's position in the stylesheet, it wasn't being applied correctly due to the cascaded selecter below it. I removed the inclde and applied the logic to the main selector to have it apply at all breakpoints

--- a/ui.frontend/src/main/webpack/components/content/core-header/v1/header/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-header/v1/header/style.scss
@@ -33,18 +33,11 @@
     vertical-align: -7px !important;
   }
 }
-@include media-breakpoint-up(lg) {
-  .sl-header, .sl-utility-bar {
-    --viewportWidth: calc(100vw - var(--scrollbarWidth, 17px));
-    left: 50%;
-    margin-left: calc(var(--viewportWidth) / -2);
-    width: var(--viewportWidth);
-  }
-}
 .sl-utility-bar, .sl-header{
-  width: 100vw;
+  --viewportWidth: calc(100vw - var(--scrollbarWidth, 17px));
+  width: var(--viewportWidth);
   left: 50%;
-  margin-left: calc(100vw/-2);
+  margin-left: calc(var(--viewportWidth) / -2);
 }
 .sl-utility-bar {
   position: relative;
